# 2dgfx

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  compile_commands.json  graphics.glsl  main.c  run.bat  setup.bat
examples/: randomlysizedtext.c
lib/: 2dgfx.c  2dgfx.h
lib/old/: 2dgraphics.c  2dgraphics.h  futil.c  futil.h  glapi.c  glapi.h  util.c  util.h
tests/: ftoa.c  gfx.c  gl.c  new.c  pack.bat  pack.c  packing.c  run.bat  sdf.bat  sdf.c  sdfpack.bat  sdfpack.c  something.c  t.bat  tests.h  tests_end.h  ts.bat
tests/include/: https.h
tests/net/: something.c  someudp.c  udp.h
tests/net/voip/: test.c  voipdbg.c
tests/references/: index.js  tinysdf.html  willdobbiedemo.html  willdobbiedemo.js
tetris/: gen.js  impls.c  run.bat  tetris.c
